# uroboform

./: .gitignore  main_Bildverarbeitung_2Dgrids.py
C++code/uRoboForm/: CMakeLists.txt  uRoboForm.cpp  uRoboForm.sln  uRoboForm.vcxproj  uRoboForm.vcxproj.filters
C++code/uRoboForm/backup/: ResultData.cpp  bandfilter.h  cnrData.cpp  decumulate.cpp  decumulate.h  extraFunc.cpp  find_edges01.cpp  find_edges01.h  grid_pos01.cpp  grid_pos01.h  grid_pos02.cpp  grid_pos02.h  grid_pos03.cpp  main.h  main_app.cpp  raw_edges.cpp  raw_edges.h  uRoboForm.vcxproj
C++code/uRoboForm/src/: example.cpp
C++code/uRoboForm/uRoboForm/: Evaluation.cpp  Evaluation.h  ImgSource.h  ResultData.h  Results.cpp  Results.h  bandfilter.cpp  bandfilter.h  cnrData.h  constants.h  cqueue.h  debug_logs.h  decumulate.h  extraFunc.cpp  fftTest.cpp  find_edges.cpp  find_edges.h  find_edges01.cpp  find_edges01.h  find_edges02.cpp  find_edges02.h  grid.h  grid_pos.cpp  grid_pos.h  grid_pos01.cpp  grid_pos01.h  grid_pos02.cpp  grid_pos02.h  grid_pos03.cpp  grid_pos03.h  main.cpp  main.h  main_app.cpp  raw_edges.cpp  raw_edges.h  signal_evaluation.cpp  signal_evaluation.h  uRoboForm.sln  uRoboForm.vcxproj  uRoboForm.vcxproj.filters  (+2 more)
C++code/uRoboForm/xtensor-master/xtensor-master/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  xtensor.sln  xtensorTargets.cmake
C++code/uRoboForm/xtl-master/xtl-master/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  (+6 more)
(+18 files in other folders)
